# Site

./: .env  .gitignore  Dockerfile  Makefile  add_test_data.py  admin_price.py  app.py  check_phones.py  check_scheduler_status.py  clear_users.py  cli.py  create_admin.py  debug_response.py  docker-compose.yml  email_service.py  extensions.py  forms.py  mobile_applications.json  pyproject.toml  register_response.html  requirements.txt  test_cleanup_now.py  test_registe.py
.github/workflows/: deploy.yml
database/models/: EmailAttempt.py  application.py  completed_service.py  discount.py  discountForm.py  inService.py  priceForm.py  queue.py  servicePrice.py  user.py  visit.py
database/tasks/: db_cleaner.py  scheduler.py
forms/: __init__.py  contact_form.py  discount_form.py
instance/: users.db
migrations/versions/: 03600407b8f4_add_email_attempts_table.py  08f63d93fb23_add_confirmation_sent_at_created_at_.py  22e34f972140_fix_visit_model_for_postgresql.py  46f86e2b027c_change_estimated_cost_to_float.py  (+6 more)
mobile_routes/: mob_db.py
routes/: __init__.py
static/css/: main.css
templates/: about.html  account.html  admin_dashboard.html  admin_discounts.html  admin_price.html  admin_queue.html  admin_requests.html  admin_service.html  base.html  base_admin.html  confirm_email.html  contact.html  contacts.html  discounts.html  edit_price.html  index.html  login.html  price.html  register.html  visit_stats.html
uploads/: 1_1756127036_1758466543_1_1758555630.xlsx  xlsx_1756075023
utils/: allowed_file.py  phone_utils.py  phone_validator.py
wsl_venv/: pyvenv.cfg
(+11 files in other folders)
