[project]
name = "site"
requires-python = "==3.12.*"
version = "0.1.0"
dependencies = [
    "flask>=2.3.0",
    "flask-sqlalchemy>=3.0.0",
    "flask-login>=0.6.0",
    "flask-migrate>=4.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.11.1",
    "flask-wtf>=1.2.2",
    "flask-cors==4.0.0",
    "flask-mail>=0.10.0",
    "phonenumbers>=9.0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
